WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207939
[iOS] fast/dom/focus-shift-crash.html and editing/selection/selection-change-in-disconnected-frame-crash.html crash after
r256864
https://bugs.webkit.org/show_bug.cgi?id=207939
Summary
[iOS] fast/dom/focus-shift-crash.html and editing/selection/selection-change-...
Wenson Hsieh
Reported
2020-02-19 08:36:16 PST
SSIA
Attachments
Patch
(2.33 KB, patch)
2020-02-19 09:12 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-02-19 09:12:17 PST
Created
attachment 391169
[details]
Patch
WebKit Commit Bot
Comment 2
2020-02-19 12:39:44 PST
Comment on
attachment 391169
[details]
Patch Clearing flags on attachment: 391169 Committed
r256935
: <
https://trac.webkit.org/changeset/256935
>
WebKit Commit Bot
Comment 3
2020-02-19 12:39:45 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-02-19 12:40:14 PST
<
rdar://problem/59601505
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug