[iOS] fast/dom/focus-shift-crash.html and editing/selection/selection-change-in-disconnected-frame-crash.html crash after r256864 https://bugs.webkit.org/show_bug.cgi?id=207939

Reviewed by Tim Horton.

Fix two layout tests that began to crash after r256864 due to a missing null check for EditorClient.
To make this conditional a bit easier to read, pull out each case where we should avoid calling
didChangeSelection() into a separate early return. The EditorClient may be null on iOS in the case where the
Frame has been detached from its Page.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::updateSelectionAppearance):


Canonical link: https://commits.webkit.org/220929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256935 268f45cc-cd09-0410-ab3c-d52691b4dbfc